fix: delete z-index

--- a/src/components/favourite-checkbox/favourite-checkbox.scss
+++ b/src/components/favourite-checkbox/favourite-checkbox.scss
@@ -16,7 +16,6 @@
     display: block;
     width: 32px;
     height: 32px;
-    z-index: 1;
     background-image: url("/favicon-32x32.png");
     background-size: contain;
     transition: all 0.3s;
